service.yaml
apiVersion: v1
kind: Service

metadata:
  name: senior-devops-service

spec:
  selector:
    app: senior-devops-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: LoadBalancer
